--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "source-map": "~0.6.1"
+    "screepsmod-auth": "^2.6.2",
+    "source-map": "~0.6.1",
+    "ws": "^8.2.3"
   }
 }
