--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
     "module": "esnext",
-    "lib": ["es2018"],
-    "target": "es2018",
+    "lib": [
+      "es2021"
+    ],
+    "target": "es2021",
     "moduleResolution": "Node",
     "outDir": "dist",
     "baseUrl": "src/",
