--- a/.prettierrc
+++ b/.prettierrc
@@ -1,28 +1,29 @@
 {
-  "semi": true,
-  "tabWidth": 4,
-  "printWidth": 140,
-  "useTabs": true,
-  "trailingComma": "all",
-  "overrides": [
-      {
-          "files": "package*.json",
-          "options": {
-              "tabWidth": 2,
-              "trailingComma": "none"
-          }
-      },
-      {
-          "files": ".travis.yml",
-          "options": {
-              "tabWidth": 2
-          }
-      },
-      {
-          "files": "*.md",
-          "options": {
-              "tabWidth": 2
-          }
-      }
-  ]
+    "semi": true,
+    "tabWidth": 4,
+    "printWidth": 140,
+    "useTabs": false,
+    "singleQuote": false,
+    "trailingComma": "all",
+    "overrides": [
+        {
+            "files": "package*.json",
+            "options": {
+                "tabWidth": 2,
+                "trailingComma": "none"
+            }
+        },
+        {
+            "files": ".travis.yml",
+            "options": {
+                "tabWidth": 2
+            }
+        },
+        {
+            "files": "*.md",
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
