--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   "dependencies": {
     "screepsmod-auth": "^2.6.2",
     "source-map": "~0.6.1",
+    "uninstall": "0.0.0",
     "ws": "^8.2.3"
   }
 }
