Mnemo + other pretty stable .

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,13 @@
     "target": "es2021",
     "moduleResolution": "Node",
     "outDir": "dist",
+    "allowJs": true,
     "baseUrl": "src/",
     "sourceMap": true,
     "strict": true,
+    "suppressImplicitAnyIndexErrors": true,
+    // "strictNullChecks":false,
+  "strictPropertyInitialization": false,
     "experimentalDecorators": true,
     "noImplicitReturns": true,
     "allowSyntheticDefaultImports": true,
