--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "source-map": "~0.6.1",
     "ts-pattern": "^3.3.3",
     "uninstall": "0.0.0",
+    "unique-names-generator": "^4.6.0",
     "ws": "^8.2.3"
   }
 }
