--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "pattern-matching-ts": "^2.0.0",
     "screepsmod-auth": "^2.6.2",
     "source-map": "~0.6.1",
     "ts-pattern": "^3.3.3",
