--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,14 @@
   "compilerOptions": {
     "module": "esnext",
     "lib": [
-      "es2021"
+      "esnext"
     ],
-    "target": "es2021",
+    "target": "es2017",
     "moduleResolution": "Node",
     "outDir": "dist",
     "allowJs": true,
     "baseUrl": "src/",
-    "sourceMap": true,
+    "sourceMap": false,
     "strict": true,
     "suppressImplicitAnyIndexErrors": true,
     // "strictNullChecks":false,
